FIXED Word wrap in Contribute

--- a/www/assets/css/screen.css
+++ b/www/assets/css/screen.css
@@ -1978,7 +1978,8 @@ body.dark {
       overflow-y: scroll;
       font-size: 0.875rem; }
     .page-contribute article form .latex-content-editor main pre {
-      color: #FF7043; }
+      color: #FF7043;
+      word-wrap: break-word; }
   .page-contribute article form .error-messages .alert {
     padding: 0.75rem 1rem;
     font-size: 0.75rem; }
